examples/errors/parsing/refined_add-no-paren-arg.rcn
fun add x : Int -> Int [pure] = x
main : (r : Int) [pure] = add(42) : (r : Int)
